syntax = "proto3";

option go_package = "github.com/BooRuleDie/Microservice-in-Go/common/api";

package api;

service StockService {
    rpc CheckIfItemIsInStock(CheckIfItemIsInStockRequest) returns (CheckIfItemIsInStockResponse);
    rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
}

message CheckIfItemIsInStockRequest {
    repeated ItemsWithQuantity Items = 1;
}

message CheckIfItemIsInStockResponse {
    bool InStock = 1;
    repeated Item Items = 2;
}

message GetItemsRequest {
    repeated string ItemIDs = 1;
}

message GetItemsResponse {
    repeated Item Items = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc GetOrder(GetOrderRequest) returns (Order);
    rpc UpdateOrder(Order) returns (Order);
}

message ItemsWithQuantity {
    string ID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string customerID = 1; // it's string becuase MongoDB's document ids' will be used
    repeated ItemsWithQuantity Items = 2;
}

message GetOrderRequest {
    string customerID = 1;
    string orderID = 2;
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;
}

message Order {
    string ID = 1;
    string customerID = 2;
    string status = 3;
    repeated Item Items = 4;
    string paymentLink = 5;
}